Refactor CollabViewSetting para poder indexarse y usar en AbstractCollabView, fitear todas las pantallas en la ventana del dispositivo, terminar settings de Calendario y fixear orden de carga y uso de argumentos en Calendario